--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "eslint:fix": "npm run eslint -- --fix",
     "ava": "ava",
     "nyc": "nyc npm run ava",
-    "test": "npm run eslint && npm run nyc"
+    "test": "npm run eslint && npm run nyc",
+    "codecov": "nyc report --reporter=text-lcov > coverage.lcov && codecov"
   },
   "author": "",
   "license": "ISC",
@@ -21,6 +22,7 @@
     "@coorpacademy/eslint-plugin-coorpacademy": "^8.1.0",
     "ava": "^0.25.0",
     "babel-register": "^6.26.0",
+    "codecov": "^3.0.0",
     "eslint": "^4.18.2",
     "nyc": "^11.6.0",
     "supertest": "^3.0.0"
