--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,15 @@
 language: node_js
-sudo: false
 node_js:
-  - 8.10.0
+  - 8.17.0
+  - 10
+  - 12
+  - 14
 cache: npm
 install:
   - npm install -g yarn@`cat package.json | jq -r '.engines.yarn // "^1.2.1"'`
   - 'npm config set //registry.npmjs.org/:_authToken $NPM_TOKEN'
   - 'npm config set @coorpacademy:registry http://registry.npmjs.org/'
 script:
-  - npm test && npm run codecov
-env:
-  - CXX=g++-5
-addons:
-  apt:
-    sources:
-      - ubuntu-toolchain-r-test
-    packages:
-      - g++-5
+  - npm test
+after_script:
+   npm run codecov
