--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "codecov": "nyc report --reporter=text-lcov > coverage.lcov && codecov"
   },
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "express": "^4.16.3",
     "serve-static": "^1.13.2",
