--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@coorpacademy/swagger-ui-express",
   "version": "1.0.1",
-  "description": "",
+  "description": "Express middleware to ship swagger ui",
   "main": "src/index.js",
   "scripts": {
     "eslint": "eslint src/ *.js *.json --ext .js,.json",
@@ -11,8 +11,16 @@
     "test": "npm run eslint && npm run nyc",
     "codecov": "nyc report --reporter=text-lcov > coverage.lcov && codecov"
   },
-  "author": "",
+  "author": "Coorpacademy Tech Team",
   "license": "MIT",
+  "homepage": "https://github.com/Coorpacademy/swagger-ui-express",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Coorpacademy/swagger-ui-express.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Coorpacademy/swagger-ui-express/issues/new"
+  },
   "dependencies": {
     "express": "^4.16.3",
     "serve-static": "^1.13.2",
