--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,7 @@ node_js:
   - 14
 cache: npm
 install:
-  - npm install -g yarn@`cat package.json | jq -r '.engines.yarn // "^1.2.1"'`
-  - 'npm config set //registry.npmjs.org/:_authToken $NPM_TOKEN'
-  - 'npm config set @coorpacademy:registry http://registry.npmjs.org/'
+  - npm install
 script:
   - npm test
 after_script:
